@@ -632,6 +632,33 @@ My best advancement costs $next_cost gold and I'm $experience|% there."
     [/event]
 
     [event]
+        name=test1
+        first_time_only=no
+        [select_unit]
+            type=Elvish Avenger
+            fire_event=yes
+        [/select_unit]
+    [/event]
+
+    [event]
+        name=select
+        first_time_only=no
+        [filter]
+            type=Elvish Avenger
+            [filter_wml]
+                [status]
+                    petrified=yes
+                [/status]
+            [/filter_wml]
+        [/filter]
+
+        [message]
+            speaker=unit
+            message="Oh hi"
+        [/message]
+    [/event]
+
+    [event]
         name=prestart
         [time_area]
             id=cave
